# batch-processor.rust

./: Cargo.toml  README.md
src/: main.rs
src/command/: mod.rs
src/processors/: mod.rs
src/processors/example/: mod.rs
